--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
   font-family: "DM Sans", sans-serif;
 }
 
+/* Index Page */
 .main-container {
   width: 100%;
   height: auto;
@@ -1024,7 +1025,6 @@ hero-texts-name {
   color: black;
 }
 
-/* Footer Section */
 /* Footer Section */
 .footer-section {
   width: 100%;
